# pfmsoft-eve-snippets

./: AGENTS.md  LICENSE  README.md  dependency-report.py  justfile  pyproject.toml  release.sh  zensical.toml
.github/agents/: Documentation Writer.agent.md  code_review.agent.md  test_writer.agent.md
.github/workflows/: docs.yml  pypi-publish.yaml
docs/: index.md
docs/api/eve/: eve_dates.md
docs/api/files/: save_text_file.md
docs/api/httpx2/: http_session_factory.md
docs/api/markdown/: markdown_table.md
docs/api/pydantic/: json_io.md
docs/api/sqlite3/: connection_helpers.md
docs/api/yaml/: yaml_io.md
docs/eve/: eve_dates.md
docs/files/: save_text_file.md
src/pfmsoft/eve_snippets/: __init__.py  settings.py
src/pfmsoft/eve_snippets/eve/: eve_dates.py
src/pfmsoft/eve_snippets/files/: save_text_file.py
src/pfmsoft/eve_snippets/httpx2/: http_session_factory.py
src/pfmsoft/eve_snippets/markdown/: markdown_table.py
src/pfmsoft/eve_snippets/pydantic/: json_io.py
src/pfmsoft/eve_snippets/sqlite3/: connection_helpers.py
src/pfmsoft/eve_snippets/whenever/: timestamp.py
src/pfmsoft/eve_snippets/yaml/: yaml_io.py
tests/pfmsoft/eve_snippets/: test_sample_test.py  test_settings.py
tests/pfmsoft/eve_snippets/eve/: test_eve_dates.py
tests/pfmsoft/eve_snippets/files/: test_save_text_file.py
tests/pfmsoft/eve_snippets/httpx2/: test_http_session_factory.py
tests/pfmsoft/eve_snippets/markdown/: test_markdown_table.py
tests/pfmsoft/eve_snippets/pydantic/: test_json_io.py
tests/pfmsoft/eve_snippets/sqlite3/: test_sqlite_connection_helpers.py
tests/pfmsoft/eve_snippets/yaml/: test_yaml_io.py
