[project]
name = "pfmsoft-eve-snippets"
version = "0.1.4"
description = "Python code snippets for working with the Eve Online API."
readme = "README.md"
authors = [{ name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "httpx2>=2.5.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "whenever>=0.10.2",
]
# https://packaging.python.org/en/latest/specifications/license-expression/#specification
license = "MIT"
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#license-files
license-files = ["LICENSE"]

[project.urls]
Documentation = "https://DonalChilde.github.io/pfmsoft-eve-snippets/"
# Documentation_rtd = "https://esi-link.readthedocs.io"
Issues = "https://github.com/DonalChilde/pfmsoft-eve-snippets/issues"
Source = "https://github.com/DonalChilde/pfmsoft-eve-snippets"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

# For a namespaced project
[tool.uv.build-backend]
module-name = "pfmsoft.eve_snippets"

[tool.uv]
exclude-newer = "1 week"

[dependency-groups]
dev = [
    "mkdocstrings-python>=2.0.5",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "zensical>=0.0.50",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]
log_file = "dev/pytest-logs/tests.log"
log_file_date_format = "%Y-%m-%dT%H:%M:%S.%f%z"
log_file_format = "%(asctime)s %(levelname)s:%(funcName)s: %(message)s [in %(pathname)s:%(lineno)d]"
log_file_level = "INFO"

[tool.coverage.run]
branch = true
parallel = true

[tool.ruff.lint]
select = ["B", "UP", "D", "FIX", "I", "F401"]
# non-imperative-mood (D401)
ignore = ["D401", "D101", "D421"]
# extend-select = ["I"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
